{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 464,
  "lineage": "e6683e06-25a8-1418-3d78-cc7c009976a3",
  "resources": [
    {
      "module": "module.umeet-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api-igw",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897105211357:internet-gateway/igw-0de29afbb47614bd9",
            "id": "igw-0de29afbb47614bd9",
            "owner_id": "897105211357",
            "tags": {
              "Name": "api-igw",
              "env": "api-igw"
            },
            "tags_all": {
              "Name": "api-igw",
              "env": "api-igw"
            },
            "vpc_id": "vpc-0a46ab18ebf4b46d2"
          },
          "dependencies": [
            "module.umeet-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.umeet-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api-route",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0de29afbb47614bd9",
            "id": "r-rtb-00cc12596277fe75c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00cc12596277fe75c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.umeet-vpc.aws_internet_gateway.this",
            "module.umeet-vpc.aws_route_table.this",
            "module.umeet-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.umeet-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api-route-table",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897105211357:route-table/rtb-00cc12596277fe75c",
            "id": "rtb-00cc12596277fe75c",
            "owner_id": "897105211357",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de29afbb47614bd9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "api-route-table",
              "name": "api-route-table"
            },
            "tags_all": {
              "Name": "api-route-table",
              "name": "api-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a46ab18ebf4b46d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.umeet-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.umeet-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api-association",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c52ed036d2f718b0",
            "route_table_id": "rtb-00cc12596277fe75c",
            "subnet_id": "subnet-052a22c1e2ddf624e"
          },
          "dependencies": [
            "module.umeet-vpc.aws_route_table.this",
            "module.umeet-vpc.aws_subnet.this",
            "module.umeet-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.umeet-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "umeet-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897105211357:security-group/sg-05b16f1410c3ab38a",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b16f1410c3ab38a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "api-sg",
            "name_prefix": "",
            "owner_id": "897105211357",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "umeet-sg",
              "resource": "security_group_all_tls"
            },
            "tags_all": {
              "Name": "umeet-sg",
              "resource": "security_group_all_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a46ab18ebf4b46d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.umeet-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.umeet-vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "allow-egress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1750843277",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05b16f1410c3ab38a",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.umeet-vpc.aws_security_group.this",
            "module.umeet-vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "allow-ing-22",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1958317797",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05b16f1410c3ab38a",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.umeet-vpc.aws_security_group.this",
            "module.umeet-vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "allow-ing-443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2756928058",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05b16f1410c3ab38a",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.umeet-vpc.aws_security_group.this",
            "module.umeet-vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "allow-ing-80",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3418638742",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05b16f1410c3ab38a",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.umeet-vpc.aws_security_group.this",
            "module.umeet-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.umeet-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897105211357:subnet/subnet-052a22c1e2ddf624e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052a22c1e2ddf624e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897105211357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "api-subnet",
              "env": "api-dev-subnet"
            },
            "tags_all": {
              "Name": "api-subnet",
              "env": "api-dev-subnet"
            },
            "vpc_id": "vpc-0a46ab18ebf4b46d2"
          },
          "dependencies": [
            "module.umeet-vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "kafka-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897105211357:subnet/subnet-0761e4a0cea152b5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0761e4a0cea152b5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897105211357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kafka-subnet",
              "env": "kafka-dev-subnet"
            },
            "tags_all": {
              "Name": "kafka-subnet",
              "env": "kafka-dev-subnet"
            },
            "vpc_id": "vpc-0a46ab18ebf4b46d2"
          },
          "dependencies": [
            "module.umeet-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.umeet-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "main-vpc",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897105211357:vpc/vpc-0a46ab18ebf4b46d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-048cd536357d973f0",
            "default_route_table_id": "rtb-04a77de88f7fb36d2",
            "default_security_group_id": "sg-0e966160917691598",
            "dhcp_options_id": "dopt-05c78b1b6273b19d4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a46ab18ebf4b46d2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a77de88f7fb36d2",
            "owner_id": "897105211357",
            "tags": {
              "Name": "main-vpc",
              "env": "dev-vpc"
            },
            "tags_all": {
              "Name": "main-vpc",
              "env": "dev-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.umeet_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "web-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:897105211357:instance/i-0518992f3965d6e8a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "umeet_instance_profile_dev",
            "id": "i-0518992f3965d6e8a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "yab",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c1edbff70dd5af2",
            "private_dns": "ip-10-0-0-125.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.125",
            "public_dns": "ec2-54-88-95-170.compute-1.amazonaws.com",
            "public_ip": "54.88.95.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eb9225d288f0badf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-052a22c1e2ddf624e",
            "tags": {
              "Name": "web-1",
              "env": "dev",
              "role": "api"
            },
            "tags_all": {
              "Name": "web-1",
              "env": "dev",
              "role": "api"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b16f1410c3ab38a"
            ]
          },
          "dependencies": [
            "module.umeet-vpc.aws_security_group.this",
            "module.umeet-vpc.aws_subnet.this",
            "module.umeet-vpc.aws_vpc.this",
            "module.umeet_api_role.aws_iam_instance_profile.this",
            "module.umeet_api_role.aws_iam_role.this"
          ]
        },
        {
          "index_key": "web-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:897105211357:instance/i-0653006ee50b02110",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "umeet_instance_profile_dev",
            "id": "i-0653006ee50b02110",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "yab",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03592fa58f19cde2b",
            "private_dns": "ip-10-0-0-207.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.207",
            "public_dns": "ec2-44-192-84-110.compute-1.amazonaws.com",
            "public_ip": "44.192.84.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00effd2abe435d8da",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0761e4a0cea152b5b",
            "tags": {
              "Name": "web-2",
              "env": "dev",
              "role": "kafka"
            },
            "tags_all": {
              "Name": "web-2",
              "env": "dev",
              "role": "kafka"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b16f1410c3ab38a"
            ]
          },
          "dependencies": [
            "module.umeet-vpc.aws_security_group.this",
            "module.umeet-vpc.aws_subnet.this",
            "module.umeet-vpc.aws_vpc.this",
            "module.umeet_api_role.aws_iam_instance_profile.this",
            "module.umeet_api_role.aws_iam_role.this"
          ]
        }
      ]
    }
  ]
}